--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -29,7 +29,7 @@
     
     <div class="main-nav">
         <div class="logo">
-            <img src="https://demo.opencart.com./image/catalog/opencart-logo.png" alt="Opencart Logo"  id="logoimg">
+            <img src="openCart.png" alt="Opencart Logo"  id="logoimg">
         </div>
         <div class="search-bar">
             <input type="text" placeholder="Search" id="gotosearch">
